Changes to all files

--- a/about.html
+++ b/about.html
@@ -2,14 +2,18 @@
 <html>
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
-	<nav class="site-nav">
-		<ul>
-			<li>Work</li>
-			<li>About</li>
-		</ul>
-	</nav>
+	<div class="top-bar">
+		<nav class="site-nav">
+			<ul>
+				<li><a href="index.html">Work</a></li>
+				<li><a href="about.html">About</a></li>
+				<h2 id="name">J.R. Hecimovich</h2>
+			</ul>
+		</nav>
+	</div>
 	<main>
 		
 		<div class="gen-info">
@@ -18,7 +22,7 @@
 				About Me
 			</h2>
 			<p class="about-me">
-				I am a Computer Science and Theatre student at Northwestern University where I am currently a Sophomore. I discovered a passion and interest in Computer Science during general engineering courses my Freshman year and since then I have focused on developing my skills and creating programs and games of my own. 
+				I am a Computer Science and Theatre student from Waxhaw, North Carolina. I am studying at Northwestern University where I am currently a Sophomore. I discovered a passion and interest in Computer Science during general engineering courses my Freshman year and since then I have focused on developing my skills and creating programs and games of my own. 
 			</p>
 		</div>
 		<div class="contact">
@@ -27,10 +31,10 @@
 			</h2>
 			<p class="contact-info">
 				Feel free to contact me on my  
-				<a href="" class="ext-link">LinkedIn</a>
-				, check out my
-				<a href="" class="ext-link">resume</a>
-				, or contact me via email at JRHecimovich@icloud.com .
+				<a href="https://www.linkedin.com/in/john-hecimovich-77aa78197" class="ext-link">LinkedIn,</a>
+				via email at <a href="mailto:JRHecimovich@icloud.com" class="ext-link">JRHecimovich@icloud.com,</a>
+				over text or phone at 704-840-2218, or check out my 
+				<a href="https://drive.google.com/file/d/1ySqv0bTdwtcncO5MRFbvtpenU8g3L5KZ/view?usp=sharing" class="ext-link">resume.</a>
 			</p>
 		</div>
 	</main>
