--- a/index.html
+++ b/index.html
@@ -2,21 +2,25 @@
 <html>
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
-	<nav class="site-nav">
-		<ul>
-			<li>Work</li>
-			<li>About</li>
-		</ul>
-	</nav>
+	<div class="top-bar">
+		<nav class="site-nav">
+			<ul>
+				<li><a href="index.html">Work</a></li>
+				<li><a href="about.html">About</a></li>
+				<h2 id="name">J.R. Hecimovich</h2>
+			</ul>
+		</nav>
+	</div>
 	<main>
 		<div class="info-container">
 			<h2 class="intro">
 				<span class="i-span">Hi, I'm J.R.</span>
 				I'm a computer science and theatre student at Northwestern University.
 			</h2>
-			<h2 class="short-bio">I am passionate about both software engineering and game development and seek to create programs and experiences to improve the lives of those around me. You can learn more about me HERE, and learn more about some of my work below.
+			<h2 class="short-bio">I am passionate about both software engineering and game development and seek to create programs and experiences to improve the lives of those around me. You can learn more about me <a href="about.html" class="ext-link">here</a>, and learn more about some of my work below.
 			</h2>	
 		</div>
 		<h2 class="project-header">Projects</h2>
@@ -25,7 +29,7 @@
 			<div class="project-1">
 				<img src="images/stormlight.png" id="stormlight-img" >
 				<h2 class="p1-info" id="p1-header">Stormlight Archive Platformer</h2>
-				<p class="p1-info"> A simple 2D platformer demo made with Unity and C#. LEARN MORE.</p>
+				<p class="p1-info"> A simple 2D platformer demo made with Unity and C#. <a href="project.html" class="learn">Learn more.</a></p>
 			</div>
 			<div class="project-2">
 				<img src="images/icecube.png" id="cooler-img">
